Update send button color

--- a/Server/Webapp/app/views/login.html
+++ b/Server/Webapp/app/views/login.html
@@ -9,7 +9,7 @@
         </h2>
         <span flex=""></span>
         <md-button class="md-icon-button" aria-label="More" ng-click="auth()">
-          <img alt="go" src="images/ic_action_send_now.png">
+          <img alt="go" src="images/svg/ic_send_white_24px.svg">
         </md-button>
       </div>
     </md-toolbar>
