Add new fonctions v0.2

--- a/Server/Webapp/app/views/cuisine_add.html
+++ b/Server/Webapp/app/views/cuisine_add.html
@@ -24,7 +24,7 @@
 			<input ng-model=date type=date class=dialog-close>
 		</md-input-container>
 		<md-input-container>
-			<md-select ng-model=place.id placeholder=Type flex>
+			<md-select ng-model=place.id placeholder=Endroit flex>
 				<md-option ng-value=place.id ng-repeat="place in places">{{place.label}}</md-option>
 			</md-select>
 		</md-input-container>
