--- a/Server/Webapp/app/views/home.html
+++ b/Server/Webapp/app/views/home.html
@@ -49,6 +49,6 @@
 		</div>
 	</div>
 	<div class="panel-body">
-		<img alt="plan" src='backend/home/plan.png' width='100%'>
+		<img alt="plan" src='../backend/home/plan.png' width='100%'>
 	</div>
 </div>
