Add notification to Courses

--- a/Server/Webapp/app/views/home.html
+++ b/Server/Webapp/app/views/home.html
@@ -15,7 +15,12 @@
 		</div>
 	</div>
 	<div class="panel panel-info">
-		<div class=panel-heading>Liste des courses</div>
+		<div class=panel-heading>
+			<div layout=row>
+				<span flex>Liste des courses</span>
+				<md-icon md-svg-src="images/svg/ic_send_white_24px.svg" ng-click="notifyCourses()"></md-icon>			
+			</div>
+		</div>
 		<div class="panel-body">
 			<md-content>
 				<div layout=row >
