--- a/Server/Webapp/app/views/plantes.html
+++ b/Server/Webapp/app/views/plantes.html
@@ -5,7 +5,7 @@
 </style>
 <div>
 	<md-card ng-repeat="plant in plants track by plant.id" style="float:left">
-		<img alt=plant ng-src="{{'http://192.168.1.23/backend/home/plants/' + plant.id + '.png'}}">
+		<img alt=plant ng-src="{{'backend/home/plants/' + plant.id + '.png'}}">
 		<md-card-content layout=row>
 			<div layout-align="center start" layout=column>
 				<h3 ng-click="editPlant(plant)">{{plant.title}} {{getRoomLabel(plant)}}</h3>
