--- a/Server/Webapp/app/styles/main.css
+++ b/Server/Webapp/app/styles/main.css
@@ -116,6 +116,10 @@ div .nList2 {
 	margin-left: 20px;
 	margin-right: 20px;
 }
+.row{
+	margin-top:10px;
+	margin-bottom:10px
+}
 .list-top-bottom{
 	margin-top: 10px;
 	margin-bottom: 10px
