--- a/Server/Webapp/app/views/devices_add.html
+++ b/Server/Webapp/app/views/devices_add.html
@@ -1,6 +1,11 @@
 <md-dialog layout-padding>
-	<md-subheader>L'appareil {{name}}</md-subheader>
+	<md-subheader>
+		L'appareil {{name}}
+	</md-subheader>
 	<md-content>
+		<div layout=row layout-align="end start">
+			<md-icon ng-if="type.id === 'smartphone'" md-svg-src="images/svg/ic_phonelink_ring_black_24px.svg" ng-click="ring(device)" layout-margin></md-icon>
+		</div>
 		<md-input-container>
 			<label>Nom de l'appareil</label>
 			<input ng-model=name class=dialog-close>
@@ -17,9 +22,13 @@
 			<md-select ng-model=type.id placeholder=Type>
 				<md-option ng-value=type.id ng-repeat="type in types">{{type.label}}</md-option>
 			</md-select>
+		</md-input-container>
+		<md-input-container>
 			<md-select ng-model=connection.id placeholder=Connexion>
 				<md-option ng-value=connection.id ng-repeat="connection in connections">{{connection.label}}</md-option>
 			</md-select>
+		</md-input-container>
+		<md-input-container>
 			<md-select ng-model=user.id placeholder=Utilisateur>
 				<md-option ng-value=user.id ng-repeat="user in users">{{user.nom}}</md-option>
 			</md-select>
