Special character bug fix

--- a/Server/Webapp/app/views/geo.html
+++ b/Server/Webapp/app/views/geo.html
@@ -19,5 +19,5 @@
 
 <map  center="{{home.lat}}, {{home.long}}" style="height:500px" zoom="14">
 	<marker position="{{home.lat}}, {{home.long}}" title="Atlantis" animation="Animation.BOUNCE"></marker>
-	<marker ng-repeat="device in devices" position="{{device.lat}}, {{device.long}}" title="{{device.mac}} à {{device.timestamp}}"></marker>
+	<marker ng-repeat="device in devices" position="{{device.lat}}, {{device.long}}" title="{{device.mac}} &agrave; {{device.timestamp}}"></marker>
 </map>
