--- a/Server/Webapp/app/views/devices_add.html
+++ b/Server/Webapp/app/views/devices_add.html
@@ -4,7 +4,8 @@
 	</md-subheader>
 	<md-content>
 		<div layout=row layout-align="end start">
-			<md-icon ng-if="type.id === 'smartphone'" md-svg-src="images/svg/ic_phonelink_ring_black_24px.svg" ng-click="ring(device)" layout-margin></md-icon>
+			<md-icon ng-if="gcm != null" md-svg-src="images/svg/ic_cloud_off_black_24px.svg" ng-click="unsuscribe()" layout-margin></md-icon>
+			<md-icon ng-if="type.id === 'smartphone'" md-svg-src="images/svg/ic_notifications_active_black_24px.svg" ng-click="ring()" layout-margin></md-icon>
 		</div>
 		<md-input-container>
 			<label>Nom de l'appareil</label>
