--- a/Server/Webapp/app/views/scenario.html
+++ b/Server/Webapp/app/views/scenario.html
@@ -6,12 +6,17 @@
 <div class="panel panel-info">
 	<div class=panel-heading>Contr&ocirc;les</div>
 	<div class=panel-body>
+		<md-select ng-model=scenario aria-label="scenarios" placeholder="Sc&eacute;nario" md-on-close="loadScenario(scenario)">
+				<md-option ng-value=scenario ng-repeat="scenario in scenarios">{{scenario.file}}</md-option>
+			</md-select>
+		<md-input-container>
+			<label>Nom du sc&eacute;nario</label>
+			<input ng-model=newScenario ng-change="updateTitle()">
+		</md-input-container>
 		<div layout>
-			<md-input-container flex>
-				<label>Nom du sc&eacute;nario</label>
-				<input ng-model=scenario>
-			</md-input-container>
-			<md-button class="md-raised" ng-click="save()">Enregistrer</md-button>		
+			<md-button class="md-raised" ng-click="new()" flex>Nouveau</md-button>		
+			<md-button class="md-raised md-primary" ng-click="save()" flex>Enregistrer</md-button>		
+			<md-button class="md-raised md-warn" ng-click="delete()" flex>Supprimer</md-button>		
 		</div>
 	</div>
 </div>
@@ -25,6 +30,7 @@
 		<block type="math_arithmetic"></block>
 		<block type="text"></block>
 		<block type="text_print"></block>
+		<block type="at_sleep"></block>
 	</category>
 	<category name="Logique">
       <block type="controls_if"></block>
@@ -37,6 +43,7 @@
     </category>
 	<sep></sep>
 	<category name="Atlantis">
+		<block type="at_light"></block>
 		<block type="at_switch"></block>
 		<block type="at_gcm"></block>
 	</category>
