Add Alarm blocks

--- a/Server/Webapp/app/views/scenario.html
+++ b/Server/Webapp/app/views/scenario.html
@@ -30,5 +30,7 @@
 	<block type="at_light"></block>
 	<block type="at_switch"></block>
 	<block type="at_gcm"></block>
+	<block type="at_alarm_status"></block>
+	<block type="at_alarm"></block>
 </xml>
 <div id="blocklyDiv" style="position: absolute"></div>
