--- a/Android/res/menu/main.xml
+++ b/Android/res/menu/main.xml
@@ -1,6 +1,7 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
-	<item android:id="@+id/itemSearch"
-	    android:title="Rechercher"
-	    android:showAsAction="always"
-	    android:actionViewClass="android.widget.SearchView" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/itemSearch"
+        android:actionViewClass="android.widget.SearchView"
+        android:showAsAction="always"
+        android:title="Rechercher"/>
 </menu>
