--- a/Android/res/menu/menu_prefs.xml
+++ b/Android/res/menu/menu_prefs.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
-	<item android:id="@+id/itemExport"
-	    android:title="Exporter les paramètres" />    
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/itemExport"
+        android:title="Exporter les paramètres"/>
 
 </menu>
