--- a/Android/res/values-v21/styles.xml
+++ b/Android/res/values-v21/styles.xml
@@ -5,8 +5,9 @@
         AppBaseTheme from BOTH res/values/styles.xml and
         res/values-v11/styles.xml on API 14+ devices.
     -->
-    <style name="AppBaseTheme" parent="@android:style/Theme.Material.Light">
+    <style name="AppBaseTheme" parent="android:Theme.Material.Light">
         <item name="android:colorPrimary">@android:color/holo_blue_dark</item>
+        <item name="android:colorPrimaryDark">@android:color/holo_blue_dark</item>
     </style>
 
 </resources>
