Add music block

--- a/Server/Webapp/app/views/scenario.html
+++ b/Server/Webapp/app/views/scenario.html
@@ -29,6 +29,7 @@
 <xml id="toolbox" style="display: none">
 	<block type="at_light"></block>
 	<block type="at_switch"></block>
+	<block type="at_music"></block>
 	<block type="at_gcm"></block>
 	<block type="at_alarm_status"></block>
 	<block type="at_alarm"></block>
