Add reserved scenarios

--- a/Server/Webapp/app/views/scenario.html
+++ b/Server/Webapp/app/views/scenario.html
@@ -3,6 +3,9 @@
     height:90%;
 }
 </style>
+<div class="alert alert-warning" role="alert" ng-if="scenario_description != null">
+	{{scenario_description}}
+</div>
 <div class="panel panel-info">
 	<div class=panel-heading>Contr&ocirc;les</div>
 	<div class=panel-body>
