Add time compare block

--- a/Server/Webapp/app/views/scenario.html
+++ b/Server/Webapp/app/views/scenario.html
@@ -37,5 +37,6 @@
 	<block type="at_gcm"></block>
 	<block type="at_alarm_status"></block>
 	<block type="at_alarm"></block>
+	<block type="at_time"></block>
 </xml>
 <div id="blocklyDiv" style="position: absolute"></div>
