--- a/Android/res/layout/row_course.xml
+++ b/Android/res/layout/row_course.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical"
-    android:orientation="horizontal"
-    android:padding="20dp" >
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center_vertical"
+              android:orientation="horizontal"
+              android:padding="20dp">
+
+    <TextView
+        android:id="@+id/lblCoursesQuantity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/qte"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/lblCoursesTitle"
@@ -14,13 +21,11 @@
         android:drawableLeft="@drawable/ng_todo"
         android:drawablePadding="10dp"
         android:gravity="center_vertical"
-        android:textStyle="bold" />
+        android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/lblCoursesQuantity"
+    <CheckBox
+        android:id="@+id/cbCoursesDone"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/qte"
-        android:gravity="center" />
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
