--- a/Server/Webapp/app/views/camera_add.html
+++ b/Server/Webapp/app/views/camera_add.html
@@ -1,1 +1,44 @@
-<p>This is the camera_add view.</p>
+<md-dialog layout-padding>
+	<md-content>
+		<div layout=column>
+			<md-input-container>
+				<label>Type</label>
+				<input ng-model=type >
+			</md-input-container>
+			<md-input-container>
+				<label>Adresse IP</label>
+				<input ng-model=ip >
+			</md-input-container>
+			<md-input-container>
+				<label>URL Image</label>
+				<input ng-model=image >
+			</md-input-container>
+			<md-input-container>
+				<label>URL Vid&eacute;o</label>
+				<input ng-model=video >
+			</md-input-container>
+			<md-input-container>
+				<label>Nom d'utilisateur</label>
+				<input ng-model=username >
+			</md-input-container>
+			<md-input-container>
+				<label>Mot de passe</label>
+				<input ng-model=password >
+			</md-input-container>
+			<md-input-container>
+				<label>Alias</label>
+				<input ng-model=alias >
+			</md-input-container>
+			<md-input-container>
+				<md-select ng-model=room.id placeholder=Pi&egrave;ce flex>
+					<md-option ng-value=room.id ng-repeat="room in rooms">{{room.room}}</md-option>
+				</md-select>
+			</md-input-container>
+		</div>
+	</md-content>
+	<div class=md-actions>
+		<md-button class=md-warn ng-click=delete() ng-if="admin && id >= 0">Supprimer</md-button>
+		<md-button ng-click=cancel()>Fermer</md-button>
+		<md-button class=md-primary ng-click=save()>Ajouter</md-button>
+	</div>
+</md-dialog>
